--- a/Pipfile
+++ b/Pipfile
@@ -6,14 +6,13 @@ name = "pypi"
 [packages]
 numpy = "*"
 opencv-python = "*"
-imutils = "*"
 
 [dev-packages]
 pytest = "*"
 pre-commit = "*"
 black = "*"
 pyupgrade = "*"
-#flake8 = "*"
+flake8 = "*"
 
 [requires]
 python_version = "3.10"
